2025-06-02T02:11:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15382279983 # 1013
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-02
* notice: last 14d: unq all: 15 63
* notice: prev accum: outdated-unq outdated-all / unq all: 1088 5519 / 1108 5583
* notice: next accum: outdated-unq outdated-all / unq all: 1089 5520 / 1108 5583
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-18] / []

2025-06-01T02:31:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15370059256 # 1011
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-01
* notice: last 14d: unq all: 15 64
* notice: prev accum: outdated-unq outdated-all / unq all: 1088 5519 / 1107 5573
* notice: next accum: outdated-unq outdated-all / unq all: 1088 5519 / 1108 5583
* notice: prev exec diff / last date diff / accum: unq all: +1 +10 -0 -0 / +1 +10 -0 -0 / 1 10
* notice: removed / changed dates: [] / [2025-05-31]

2025-05-31T02:03:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15359011212 # 1009
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-31
* notice: last 14d: unq all: 14 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1087 5516 / 1107 5573
* notice: next accum: outdated-unq outdated-all / unq all: 1088 5519 / 1107 5573
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-16] / []

2025-05-30T12:53:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15347229410 # 1008