@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-02T02:11:26Z",
-  "count_outdated" : 5520,
-  "uniques_outdated" : 1089,
-  "count" : 5583,
-  "uniques" : 1108,
+  "timestamp" : "2025-06-03T02:07:58Z",
+  "count_outdated" : 5526,
+  "uniques_outdated" : 1090,
+  "count" : 5592,
+  "uniques" : 1110,
   "views" : [
-    {
-      "timestamp": "2025-05-19T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 3, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-20T00:00:00Z",
       "count": 7,
@@ -94,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-02T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
