@@ -1,12 +1,7 @@
 {
-  "count": 63,
-  "uniques": 15,
+  "count": 66,
+  "uniques": 16,
   "views": [
-    {
-      "timestamp": "2025-05-19T00:00:00Z",
-      "count": 6,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-20T00:00:00Z",
       "count": 7,
@@ -51,6 +46,11 @@
       "timestamp": "2025-05-31T00:00:00Z",
       "count": 10,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-02T00:00:00Z",
+      "count": 9,
+      "uniques": 2
     }
   ]
 }
