@@ -1,3 +1,12 @@
+2025-06-03T02:07:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15406888429 # 1015
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-03
+* notice: last 14d: unq all: 16 66
+* notice: prev accum: outdated-unq outdated-all / unq all: 1089 5520 / 1108 5583
+* notice: next accum: outdated-unq outdated-all / unq all: 1090 5526 / 1110 5592
+* notice: prev exec diff / last date diff / accum: unq all: +2 +9 -0 -0 / +2 +9 -0 -0 / 2 9
+* notice: removed / changed dates: [2025-05-19] / [2025-06-02]
+
 2025-06-02T02:11:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15382279983 # 1013
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-02
